# bazel-scoped-package-example

./: BUILD.bazel  WORKSPACE.bazel  package-lock.json  package.json  test.ts
